@@ -1,3 +1,11 @@
+2006-11-29  Paul Brook  <paul@codesourcery.com>
+	Julian Brown  <julian@codesourcery.com>
+
+	* elf32-arm.c (copy_eabi_attributes): Correct starting offset.
+	(elf32_arm_merge_eabi_attributes): Mark output as initialized.
+	Only set Tag_CPU_name and Tag_ABI_PCS_R9_use if input attribute
+	is present.
+
 2006-11-27  Bob Wilson  <bob.wilson@acm.org>
 
 	* elf32-xtensa.c (elf_xtensa_special_sections): Add .xtensa.info.
